include ../../gnome-doc-utils.make
DOC_ID = @PACKAGE@-@VERSION@
DOC_INCLUDES = legal.xml
DOC_LINGUAS=

DOC_PAGES = \
	AboutThisDocument.page\
	BrowserArtistBrowser.page\
	BrowserDatabase.page\
	BrowserGenreBrowser.page\
	BrowserMetadataBrowser.page\
	BrowserNowPlaying.page\
	BrowserPlaylistEditor.page\
	BrowserPlayQueue.page\
	BrowserSearch.page\
	Browsers.page\
	BuildInstallInstructions.page\
	EasyCommand.page\
	index.page\
	MainInterface.page\
	PreferencesConnection.page\
	PreferencesInterface.page\
	PreferencesInternalExtraPlaylistView.page\
	PreferencesMetadataBrowser.page\
	PreferencesMetadataHandler.page\
	PreferencesMultimediaKeys.page\
	PreferencesNotification.page\
	Preferences.page\
	PreferencesPlugins.page\
	PreferencesProxy.page\
	PreferencesServerSettings.page\
	PreferencesTagBasedBrowser.page\
	QuickStartGuide.page\
	TipsAndTricks.page



dist-hook:doc-dist-hook

