themedir = $(pkgdatadir)/icons/hicolor
size = 128x128
context = status

iconsdir = $(themedir)/$(size)/$(context)

dist_icons_DATA = \
		stylized-cover.png\
		stylized-fetching-cover.png\
		stylized-no-cover.png\
		fetching-artist.png\
		frame-artist.png\
		no-artist.png\
        media-track-length.png\
        media-album.png\
        media-format.png\
        media-genre.png\
        media-num-tracks.png
