themedir = $(pkgdatadir)/hicolor
size = 16x16
context = actions

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
		audio-volume-high.png\
		audio-volume-low.png\
		audio-volume-medium.png\
		audio-volume-muted.png

noinst_DATA =

EXTRA_DIST = \
        $(icons_DATA)   \
        $(noinst_DATA)
