themedir = $(pkgdatadir)/icons/hicolor
size = 22x22
context = status

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
		audio-volume-high.png\
		audio-volume-low.png\
		audio-volume-medium.png\
		audio-volume-muted.png\
		gmpc-tray-disconnected.png\
		gmpc-tray-pause.png\
		gmpc-tray-play.png\
		gmpc-tray.png

noinst_DATA =

EXTRA_DIST = \
        $(icons_DATA)   \
        $(noinst_DATA)
