themedir = $(pkgdatadir)/icons/hicolor
size = 32x32
context = actions

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
		media-tag.png\
		media-playlist.png\
		playlist-search-browser.png\
		playlist-browser.png\
		tag-browser.png

noinst_DATA = 

EXTRA_DIST = \
        $(icons_DATA)   \
        $(noinst_DATA)
