themedir = $(pkgdatadir)/icons/hicolor
size = 48x48
context = status

iconsdir = $(themedir)/$(size)/$(context)

dist_icons_DATA = \
		stylized-cover.png\
		frame-artist.png\
		fetching-artist.png\
		gmpc-tray.png\
		no-artist.png\
        media-track-length.png\
        media-album.png\
        media-format.png\
        media-genre.png\
        media-num-tracks.png
