themedir = $(pkgdatadir)/hicolor
size = scalable
context = actions

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
		audio-volume-high.svg\
		audio-volume-low.svg\
		audio-volume-medium.svg\
		audio-volume-muted.svg

noinst_DATA =

EXTRA_DIST = \
        $(icons_DATA)   \
        $(noinst_DATA)
