themedir = $(pkgdatadir)/icons/hicolor
size = scalable
context = status

iconsdir = $(themedir)/$(size)/$(context)

icons_DATA = \
		audio-volume-high.svg\
		audio-volume-low.svg\
		audio-volume-medium.svg\
		audio-volume-muted.svg\
		gmpc-tray.svg\
		gmpc-tray-disconnected.svg\
		gmpc-tray-play.svg\
		gmpc-tray-pause.svg

noinst_DATA =

EXTRA_DIST = \
        $(icons_DATA)   \
        $(noinst_DATA)
