themedir = $(pkgdatadir)/icons/Humanity
size = 128x128
context = actions

iconsdir = $(themedir)/$(size)/$(context)

dist_icons_DATA = \
                  media-repeat-single.png\
                  gmpc-metabrowser.png\
                  media-consume.png\
                  gmpc-database.png\
                  dynamic.png\
                  gmpc-serve.png\
                  info.png\
                  media-audiofile.png\
                  media-playlist.png\
                  media-tag.png\
                  playlist-browser.png\
                  playlist-search-browser.png\
                  tag-browser.png
